--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -9,14 +9,12 @@ Size=608,326
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
-Size=1280,1024
+Size=1252,845
 Collapsed=0
 
 [Window][Tests]
-ViewportPos=-14,30
-ViewportId=0x3DD03744
-Pos=1277,0
-Size=197,771
+Pos=1493,408
+Size=261,770
 Collapsed=0
 DockId=0x00000009,0
 
@@ -43,10 +41,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-ViewportPos=-14,30
-ViewportId=0x3DD03744
-Pos=1277,0
-Size=197,771
+Pos=1493,408
+Size=261,770
 Collapsed=0
 DockId=0x00000009,1
 
@@ -58,10 +54,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-ViewportPos=-14,30
-ViewportId=0x3DD03744
-Pos=0,576
-Size=1275,195
+Pos=280,983
+Size=1211,195
 Collapsed=0
 DockId=0x00000007,0
 
@@ -77,9 +71,8 @@ Size=32,35
 Collapsed=0
 
 [Window][SceneTest]
-ViewportPos=-14,30
-ViewportId=0x3DD03744
-Size=1275,574
+Pos=280,408
+Size=1211,573
 Collapsed=0
 DockId=0x00000004,0
 
@@ -106,13 +99,19 @@ Size=1221,189
 Collapsed=0
 DockId=0x00000007,1
 
+[Window][InvisibleWindow]
+Pos=0,0
+Size=1300,845
+Collapsed=0
+
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=-14,30 Size=1474,771 Split=X
-  DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1153,686 Split=Y
+DockNode        ID=0x00000002 Pos=280,408 Size=1474,770 Split=X
+  DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1211,686 Split=Y
     DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,715 Split=X
       DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
       DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=357,936
     DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,243 Selected=0x49278EEE
-  DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=178,686 Selected=0x1B3D98FF
-DockSpace       ID=0x8B93E3BD Pos=338,78 Size=1280,1024 CentralNode=1
+  DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=261,686 Selected=0x1B3D98FF
+DockSpace       ID=0x21BA594C Window=0xD8117908 Pos=0,19 Size=1300,826 CentralNode=1
+DockSpace       ID=0x8B93E3BD Pos=156,31 Size=1252,845 CentralNode=1
 
