--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -13,7 +13,7 @@ Size=1252,845
 Collapsed=0
 
 [Window][Tests]
-Pos=1493,408
+Pos=1474,582
 Size=261,770
 Collapsed=0
 DockId=0x00000009,0
@@ -41,7 +41,7 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-Pos=1493,408
+Pos=1474,582
 Size=261,770
 Collapsed=0
 DockId=0x00000009,1
@@ -54,7 +54,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=280,983
+Pos=261,1157
 Size=1211,195
 Collapsed=0
 DockId=0x00000007,0
@@ -71,7 +71,7 @@ Size=32,35
 Collapsed=0
 
 [Window][SceneTest]
-Pos=280,408
+Pos=261,582
 Size=1211,573
 Collapsed=0
 DockId=0x00000004,0
@@ -101,17 +101,22 @@ DockId=0x00000007,1
 
 [Window][InvisibleWindow]
 Pos=0,0
-Size=1300,845
+Size=1536,793
+Collapsed=0
+
+[Window][Tests2]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=280,408 Size=1474,770 Split=X
+DockNode        ID=0x00000002 Pos=261,582 Size=1474,770 Split=X
   DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1211,686 Split=Y
     DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,715 Split=X
       DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
       DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=357,936
     DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,243 Selected=0x49278EEE
   DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=261,686 Selected=0x1B3D98FF
-DockSpace       ID=0x21BA594C Window=0xD8117908 Pos=0,19 Size=1300,826 CentralNode=1
+DockSpace       ID=0x21BA594C Window=0xD8117908 Pos=0,19 Size=1536,774 CentralNode=1
 DockSpace       ID=0x8B93E3BD Pos=156,31 Size=1252,845 CentralNode=1
 
