not working yet

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -1,122 +1,27 @@
+[Window][InvisibleWindow]
+Pos=0,0
+Size=1256,845
+Collapsed=0
+
 [Window][Debug##Default]
-Pos=255,72
+Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][HE]
-Pos=4,6
-Size=608,326
-Collapsed=0
-
-[Window][DockSpaceViewport_11111111]
-Size=1252,845
-Collapsed=0
-
-[Window][Tests]
-Pos=1474,582
-Size=261,770
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Dear ImGui Metrics/Debugger]
-ViewportPos=1357,276
-ViewportId=0x8FC55800
-Size=267,233
-Collapsed=0
-
-[Window][Dear ImGui Debug Log]
-Pos=60,60
-Size=708,156
-Collapsed=0
-
-[Window][Dear ImGui Stack Tool]
-Pos=60,60
-Size=354,104
-Collapsed=0
-
-[Window][hola]
-Pos=27,27
-Size=415,218
-Collapsed=0
-DockId=0x8B93E3BD,1
-
-[Window][Hardware]
-Pos=1474,582
-Size=261,770
-Collapsed=0
-DockId=0x00000009,1
-
-[Window][Scene]
-ViewportPos=21,13
-ViewportId=0x3DD03744
-Size=1487,1028
-Collapsed=0
-DockId=0x00000005,0
-
 [Window][Console]
-Pos=261,1157
-Size=1211,195
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Conasole]
-Pos=60,60
-Size=32,35
-Collapsed=0
-DockId=0x8B93E3BD,1
-
-[Window][Test]
-Pos=60,60
-Size=32,35
+Pos=221,483
+Size=472,237
 Collapsed=0
 
 [Window][SceneTest]
-Pos=261,582
-Size=1211,573
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Test2]
-Pos=60,60
-Size=32,35
+Pos=354,357
+Size=572,452
 Collapsed=0
 
-[Window][Hardware2]
-Pos=60,60
-Size=325,99
-Collapsed=0
-
-[Window][Hardware23]
-Pos=153,399
-Size=325,99
-Collapsed=0
-
-[Window][Console2]
-ViewportPos=115,38
-ViewportId=0x3DD03744
-Pos=0,771
-Size=1221,189
-Collapsed=0
-DockId=0x00000007,1
-
-[Window][InvisibleWindow]
-Pos=0,0
-Size=1310,845
-Collapsed=0
-
-[Window][Tests2]
-Pos=60,60
-Size=32,35
+[Window][DockSpaceViewport_11111111]
+Size=1280,1024
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=261,582 Size=1474,770 Split=X
-  DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1211,686 Split=Y
-    DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,715 Split=X
-      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
-      DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=357,936
-    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,243 Selected=0x49278EEE
-  DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=261,686 Selected=0x1B3D98FF
-DockSpace       ID=0x21BA594C Window=0xD8117908 Pos=0,19 Size=1310,826 CentralNode=1
-DockSpace       ID=0x8B93E3BD Pos=156,31 Size=1252,845 CentralNode=1
+DockSpace ID=0x6080C5C7 Window=0xD8117908 Pos=152,31 Size=1256,845 CentralNode=1
 
