imgui docking work well now😈

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -1,6 +1,5 @@
 [Window][InvisibleWindow]
-Pos=0,0
-Size=1256,845
+Size=1363,1024
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,19 +8,40 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=221,483
-Size=472,237
+Pos=230,839
+Size=1431,178
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][SceneTest]
-Pos=354,357
-Size=572,452
+Pos=230,19
+Size=1431,818
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][DockSpaceViewport_11111111]
-Size=1280,1024
+Pos=0,19
+Size=1920,998
 Collapsed=0
 
+[Window][Inspector]
+Pos=1663,19
+Size=257,998
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Hierarchy]
+Pos=0,19
+Size=228,998
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace ID=0x6080C5C7 Window=0xD8117908 Pos=152,31 Size=1256,845 CentralNode=1
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,998 Split=X Selected=0x3D2516CD
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=228,1005 Selected=0x29EABFBD
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1690,1005 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1431,1005 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1920,818 CentralNode=1 Selected=0x3D2516CD
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1920,178 Selected=0x49278EEE
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=257,1005 Selected=0xE7039252
 
