--- a/GameEngine/_GameEngineProject.vcxproj
+++ b/GameEngine/_GameEngineProject.vcxproj
@@ -20,13 +20,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -134,6 +134,8 @@
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ImGuiSamples.h" />
+    <ClInclude Include="ImHierarchyWindow.h" />
+    <ClInclude Include="ImInspectorWindow.h" />
     <ClInclude Include="ImMainMenuBar.h" />
     <ClInclude Include="ImMainWindow.h" />
     <ClInclude Include="Light.h" />
@@ -168,6 +170,8 @@
     <ClCompile Include="External_Libraries\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="glmath.cpp" />
     <ClCompile Include="ImGuiSamples.cpp" />
+    <ClCompile Include="ImHierarchyWindow.cpp" />
+    <ClCompile Include="ImInspectorWindow.cpp" />
     <ClCompile Include="ImMainMenuBar.cpp" />
     <ClCompile Include="ImMainWindow.cpp" />
     <ClCompile Include="Light.cpp" />
