Imgui windows update

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -8,40 +8,40 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=224,839
-Size=1437,178
+Pos=0,542
+Size=985,178
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][SceneTest]
-Pos=224,19
-Size=1437,818
+Pos=127,19
+Size=858,521
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1920,998
+Size=1220,701
 Collapsed=0
 
 [Window][Inspector]
-Pos=1663,19
-Size=257,998
+Pos=987,19
+Size=233,701
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=222,998
+Size=125,521
 Collapsed=0
 DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,998 Split=X Selected=0x3D2516CD
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=222,1005 Selected=0x29EABFBD
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1696,1005 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1437,1005 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1920,818 CentralNode=1 Selected=0x3D2516CD
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1920,178 Selected=0x49278EEE
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=257,1005 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=X Selected=0x3D2516CD
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1301,774 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1920,818 Split=X Selected=0x3D2516CD
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=125,521 Selected=0x29EABFBD
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1174,521 CentralNode=1 Selected=0x3D2516CD
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,178 Selected=0x49278EEE
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=233,774 Selected=0xE7039252
 
