--- a/GameEngine/_GameEngineProject.vcxproj
+++ b/GameEngine/_GameEngineProject.vcxproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -133,11 +133,13 @@
     <ClInclude Include="External_Libraries\ImGui\imstb_truetype.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="ImConfigWindow.h" />
     <ClInclude Include="ImGuiSamples.h" />
     <ClInclude Include="ImHierarchyWindow.h" />
     <ClInclude Include="ImInspectorWindow.h" />
     <ClInclude Include="ImMainMenuBar.h" />
     <ClInclude Include="ImMainWindow.h" />
+    <ClInclude Include="ImSceneWindow.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="ModuleCamera3D.h" />
     <ClInclude Include="ModuleDummy.h" />
@@ -169,11 +171,13 @@
     <ClCompile Include="External_Libraries\ImGui\imgui_tables.cpp" />
     <ClCompile Include="External_Libraries\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="glmath.cpp" />
+    <ClCompile Include="ImConfigWindow.cpp" />
     <ClCompile Include="ImGuiSamples.cpp" />
     <ClCompile Include="ImHierarchyWindow.cpp" />
     <ClCompile Include="ImInspectorWindow.cpp" />
     <ClCompile Include="ImMainMenuBar.cpp" />
     <ClCompile Include="ImMainWindow.cpp" />
+    <ClCompile Include="ImSceneWindow.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
