--- a/GameEngine/_GameEngineProject.vcxproj
+++ b/GameEngine/_GameEngineProject.vcxproj
@@ -69,7 +69,7 @@
       <ExceptionHandling>false</ExceptionHandling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(SolutionDir)External_Libraries\ImGui;$(SolutionDir)External_Libraries\SDL\include;$(SolutionDir)External_Libraries\Glew\include;$(SolutionDir)External_Libraries\Assimp\include;$(SolutionDir)External_Libraries\MathGeoLib\include;$(SolutionDir)External_Libraries\DevIL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WINDOWS_IGNORE_PACKING_MISMATCH;MATH_BULLET_INTEROP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WINDOWS_IGNORE_PACKING_MISMATCH;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -131,6 +131,66 @@
     <ClInclude Include="External_Libraries\ImGui\imstb_rectpack.h" />
     <ClInclude Include="External_Libraries\ImGui\imstb_textedit.h" />
     <ClInclude Include="External_Libraries\ImGui\imstb_truetype.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Algorithm\Random\LCG.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\AABB.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\AABB2D.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Capsule.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Circle.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Cone.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Cylinder.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Frustum.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\GeometryAll.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\GeomType.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\HitInfo.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\KDTree.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Line.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\LineSegment.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\OBB.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\PBVolume.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Plane.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Polygon.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Polyhedron.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\QuadTree.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Ray.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Sphere.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Triangle.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\MathBuildConfig.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\MathGeoLib.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\MathGeoLibFwd.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\assume.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\BitOps.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Complex.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\CoordinateAxisConvention.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\FixedPoint.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float2.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float3.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float3x3.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float3x4.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4x4.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4x4_neon.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4x4_sse.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4_neon.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4_sse.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\FloatCmp.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathAll.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathConstants.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathFunc.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathLog.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathNamespace.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathTypes.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MatrixProxy.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\myassert.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Polynomial.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Quat.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\quat_simd.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Rect.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Reinterpret.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\SSEMath.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\sse_mathfun.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\TransformOps.h" />
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Time\Clock.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ImConfigWindow.h" />
@@ -170,6 +230,38 @@
     <ClCompile Include="External_Libraries\ImGui\imgui_impl_sdl.cpp" />
     <ClCompile Include="External_Libraries\ImGui\imgui_tables.cpp" />
     <ClCompile Include="External_Libraries\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Algorithm\Random\LCG.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\AABB.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Capsule.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Circle.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Cone.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Cylinder.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Frustum.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Line.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\LineSegment.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\OBB.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Plane.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Polygon.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Polyhedron.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Ray.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Sphere.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Triangle.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\BitOps.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float2.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float3.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float3x3.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float3x4.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float4.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float4x4.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\MathFunc.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\MathLog.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\MathOps.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\Polynomial.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\Quat.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\SSEMath.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\TransformOps.cpp" />
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Time\Clock.cpp" />
     <ClCompile Include="glmath.cpp" />
     <ClCompile Include="ImConfigWindow.cpp" />
     <ClCompile Include="ImGuiSamples.cpp" />
@@ -203,6 +295,12 @@
     <None Include="External_Libraries\Assimp\include\quaternion.inl" />
     <None Include="External_Libraries\Assimp\include\vector2.inl" />
     <None Include="External_Libraries\Assimp\include\vector3.inl" />
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\KDTree.inl" />
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\QuadTree.inl" />
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_AVX.inl" />
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_CPP.inl" />
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_SSE.inl" />
+    <None Include="External_Libraries\MathGeoLib\include\Math\Matrix.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
