--- a/GameEngine/_GameEngineProject.vcxproj.filters
+++ b/GameEngine/_GameEngineProject.vcxproj.filters
@@ -103,6 +103,102 @@
     <ClCompile Include="ImConfigWindow.cpp">
       <Filter>Sources\Resources\ImguiWindows</Filter>
     </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Algorithm\Random\LCG.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\AABB.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Capsule.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Circle.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Cone.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Cylinder.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Frustum.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Line.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\LineSegment.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\OBB.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Plane.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Polygon.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Polyhedron.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Ray.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Sphere.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\Triangle.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\BitOps.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float2.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float3.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float3x3.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float3x4.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float4.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\float4x4.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\MathFunc.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\MathLog.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\MathOps.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\Polynomial.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\Quat.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\SSEMath.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Math\TransformOps.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
+    <ClCompile Include="External_Libraries\MathGeoLib\include\Time\Clock.cpp">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -333,6 +429,186 @@
     <ClInclude Include="S_GameObject.h">
       <Filter>Sources\GO_Main</Filter>
     </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\MathBuildConfig.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\MathGeoLib.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\MathGeoLibFwd.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Algorithm\Random\LCG.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\AABB.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\AABB2D.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Capsule.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Circle.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Cone.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Cylinder.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Frustum.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\GeometryAll.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\GeomType.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\HitInfo.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\KDTree.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Line.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\LineSegment.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\OBB.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\PBVolume.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Plane.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Polygon.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Polyhedron.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\QuadTree.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Ray.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Sphere.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\Triangle.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\assume.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\BitOps.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Complex.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\CoordinateAxisConvention.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\FixedPoint.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float2.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float3.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float3x3.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float3x4.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4_neon.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4_sse.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4x4.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4x4_neon.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\float4x4_sse.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\FloatCmp.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathAll.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathConstants.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathFunc.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathLog.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathNamespace.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MathTypes.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\MatrixProxy.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\myassert.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Polynomial.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Quat.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\quat_simd.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Rect.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\Reinterpret.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\sse_mathfun.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\SSEMath.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Math\TransformOps.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
+    <ClInclude Include="External_Libraries\MathGeoLib\include\Time\Clock.h">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
@@ -380,6 +656,9 @@
     <Filter Include="Sources\Resources\ImGuiSamples">
       <UniqueIdentifier>{61c4bde7-56c6-48b9-9f6d-1d2a6bbb0d8d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Libraries\MathGeoLib">
+      <UniqueIdentifier>{5a97631c-e34f-4dd9-8f08-5967fe9ccc4e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="External_Libraries\Assimp\include\color4.inl">
@@ -402,6 +681,24 @@
     </None>
     <None Include="External_Libraries\Assimp\include\vector3.inl">
       <Filter>Libraries\Assimp</Filter>
+    </None>
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\KDTree.inl">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </None>
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\QuadTree.inl">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </None>
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_AVX.inl">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </None>
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_CPP.inl">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </None>
+    <None Include="External_Libraries\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_SSE.inl">
+      <Filter>Libraries\MathGeoLib</Filter>
+    </None>
+    <None Include="External_Libraries\MathGeoLib\include\Math\Matrix.inl">
+      <Filter>Libraries\MathGeoLib</Filter>
     </None>
   </ItemGroup>
 </Project>
