intentando arreglar problema drag and drop no solucionado

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -9,9 +9,9 @@ Collapsed=0
 
 [Window][Console]
 Pos=0,542
-Size=931,178
+Size=1220,178
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][SceneTest]
 Pos=223,19
@@ -26,7 +26,7 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=933,19
-Size=287,701
+Size=287,521
 Collapsed=0
 DockId=0x00000004,0
 
@@ -37,11 +37,11 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=X Selected=0x3D2516CD
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1631,774 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1920,818 Split=X Selected=0x3D2516CD
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=221,521 Selected=0x29EABFBD
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1408,521 CentralNode=1 Selected=0x3D2516CD
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,178 Selected=0x49278EEE
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=287,774 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1631,774 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=221,521 Selected=0x29EABFBD
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1408,521 CentralNode=1 Selected=0x3D2516CD
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=287,774 Selected=0xE7039252
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Selected=0x49278EEE
 
