--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -8,40 +8,46 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=0,542
-Size=1220,178
+Pos=0,839
+Size=1920,178
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][SceneTest]
 Pos=223,19
-Size=708,521
+Size=1296,818
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1220,701
+Size=1920,998
 Collapsed=0
 
 [Window][Inspector]
-Pos=933,19
-Size=287,521
+Pos=1521,19
+Size=399,818
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=221,521
+Size=221,818
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Configuration]
+Pos=1521,19
+Size=399,818
+Collapsed=0
+DockId=0x00000004,1
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,998 Split=Y Selected=0x3D2516CD
   DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1631,774 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1519,774 Split=X
       DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=221,521 Selected=0x29EABFBD
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1408,521 CentralNode=1 Selected=0x3D2516CD
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=287,774 Selected=0xE7039252
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1296,521 CentralNode=1 Selected=0x3D2516CD
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=399,774 Selected=0x09A1ED00
   DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Selected=0x49278EEE
 
