--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -14,8 +14,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][SceneTest]
-Pos=223,19
-Size=1397,818
+Pos=289,19
+Size=1331,818
 Collapsed=0
 DockId=0x00000006,0
 
@@ -32,7 +32,7 @@ DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=221,818
+Size=287,818
 Collapsed=0
 DockId=0x00000005,0
 
@@ -46,8 +46,8 @@ DockId=0x00000004,1
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,998 Split=Y Selected=0x3D2516CD
   DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=920,774 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=221,521 Selected=0x29EABFBD
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=697,521 CentralNode=1 Selected=0x3D2516CD
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=298,774 Selected=0x09A1ED00
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=287,521 Selected=0x29EABFBD
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=631,521 CentralNode=1 Selected=0x3D2516CD
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=298,774 Selected=0xE7039252
   DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Selected=0x49278EEE
 
