--- a/GameEngine/_GameEngineProject.vcxproj
+++ b/GameEngine/_GameEngineProject.vcxproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="C_Mesh.h" />
     <ClInclude Include="C_Transform.h" />
     <ClInclude Include="External_Libraries\Assimp\include\ai_assert.h" />
     <ClInclude Include="External_Libraries\Assimp\include\anim.h" />
@@ -232,6 +233,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="C_Mesh.cpp" />
     <ClCompile Include="C_Transform.cpp" />
     <ClCompile Include="External_Libraries\ImGui\imgui.cpp" />
     <ClCompile Include="External_Libraries\ImGui\imgui_demo.cpp" />
