--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -42,12 +42,17 @@ Size=298,521
 Collapsed=0
 DockId=0x00000004,1
 
+[Window][About]
+Pos=63,120
+Size=226,181
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
   DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=920,774 Split=X
       DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=287,521 Selected=0x29EABFBD
       DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=631,521 CentralNode=1 Selected=0x3D2516CD
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=298,774 Selected=0xE7039252
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=298,774 Selected=0x09A1ED00
   DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Selected=0x49278EEE
 
