--- a/GameEngine/_GameEngineProject.vcxproj.filters
+++ b/GameEngine/_GameEngineProject.vcxproj.filters
@@ -211,6 +211,9 @@
     <ClCompile Include="ImGameWindow.cpp">
       <Filter>Sources\Resources\ImguiWindows</Filter>
     </ClCompile>
+    <ClCompile Include="CamBuffers.cpp">
+      <Filter>Sources\Tools\CamBuffers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -657,6 +660,9 @@
     <ClInclude Include="ImGameWindow.h">
       <Filter>Sources\Resources\ImguiWindows</Filter>
     </ClInclude>
+    <ClInclude Include="CamBuffers.h">
+      <Filter>Sources\Tools\CamBuffers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
@@ -712,6 +718,9 @@
     </Filter>
     <Filter Include="Sources\Tools\Camera">
       <UniqueIdentifier>{a545bdc5-4289-488a-a6af-8dfa338388d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\Tools\CamBuffers">
+      <UniqueIdentifier>{2ea804b0-76d6-4e9e-9ccb-b64a8e5cdc02}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
